--- a/amor01/página2.html
+++ b/amor01/página2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dia 03</title>
+    <title>Foto 1</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -25,15 +25,13 @@
 
     <main>
         <article>
-            <h2>Olá, aqui vai uma declaração</h2>
+            <h2>Bocós</h2>
        
-            <p>Não sei bem o que te dizer, então fiz esse simples site com fotos de alguns momentos nossos <br> Espero que goste</p>
             <section>
                 <picture>
-                    <img src="imagens/foto1.jpg" alt="">
+                    <img src="imagens/foto2.jpg" alt="">
                 </picture>
             </section>
-            <h3>Feliz nosso dia <br>Te amo muitão &#x2665</h3>
         </article>
         
     </main>
